--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0", "numpy<2", "nltk", "scikit-learn", "fasttext", "onnxruntime", "onnxruntime-extensions"]
+requires = ["setuptools>=61.0", "numpy<2", "nltk", "scikit-learn", "fasttext", "onnxruntime", "onnxruntime-extensions", "pyspellchecker"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "semantic_compressor"
-version = "1.3"
+version = "1.4"
 authors = [
   { name="Carlo Moro", email="cnmoro@gmail.com" },
 ]
@@ -22,5 +22,6 @@ dependencies = [
     "scikit-learn",
     "fasttext",
     "onnxruntime",
-    "onnxruntime-extensions"
+    "onnxruntime-extensions",
+    "pyspellchecker"
 ]
