--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "semantic_compressor"
-version = "1.7"
+version = "1.9"
 authors = [
   { name="Carlo Moro", email="cnmoro@gmail.com" },
 ]
@@ -21,7 +21,6 @@ dependencies = [
     "nltk",
     "scikit-learn",
     "fasttext",
-    "onnxruntime",
-    "onnxruntime-extensions",
+    "model2vec",
     "pyspellchecker"
 ]
